--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.ff.rpc</groupId>
     <artifactId>rpc-fast</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>rpc-fast</name>
     <packaging>pom</packaging>
 
     <modules>
         <module>rpc-annotation</module>
+        <module>rpc-common</module>
     </modules>
 
     <!--<parent>
@@ -28,6 +29,16 @@
 
 
     <dependencies>
+
+
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-reload4j</artifactId>
+            <version>2.0.16</version>
+            <!--<scope>test</scope>-->
+        </dependency>
+
 
 
 
@@ -49,7 +60,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <compilerArgs><!--解决SpringBoot 3.2 Parameter Name Retention 问题-->
                         <arg>-parameters</arg>
                     </compilerArgs>
