--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -2,53 +2,30 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>cn.ff.rpc</groupId>
+        <artifactId>rpc-fast</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <groupId>cn.ff.rpc</groupId>
     <artifactId>rpc-common</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>rpc-common</name>
-    <description>rpc-common</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
-    <properties>
-        <java.version>23</java.version>
-    </properties>
+
+
+
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <groupId>cn.ff.rpc</groupId>
+            <artifactId>rpc-annotation</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+       <!-- <dependency>
+            <groupId>io.binghe.rpc</groupId>
+            <artifactId>bhrpc-threadpool</artifactId>
+            <version>${project.version}</version>
+        </dependency>-->
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
