--- a/rpc-provider/pom.xml
+++ b/rpc-provider/pom.xml
@@ -2,13 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>cn.ff.rpc</groupId>
         <artifactId>rpc-fast</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>rpc-test</artifactId>
+    <packaging>pom</packaging>
+    <artifactId>rpc-provider</artifactId>
 
+
+    <modules>
+        <module>rpc-provider-common</module>
+        <module>rpc-provider-native</module>
+        <!--<module>rpc-provider-spring</module>-->
+    </modules>
 
 
 
@@ -18,18 +26,8 @@
             <artifactId>rpc-common</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>cn.ff.rpc</groupId>
-            <artifactId>rpc-provider-native</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-        </dependency>
-    </dependencies>
 
+    </dependencies>
 
 
 </project>
