--- a/rpc-provider/rpc-provider-native/pom.xml
+++ b/rpc-provider/rpc-provider-native/pom.xml
@@ -4,10 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>cn.ff.rpc</groupId>
-        <artifactId>rpc-fast</artifactId>
+        <artifactId>rpc-provider</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>rpc-test</artifactId>
+
+    <artifactId>rpc-provider-native</artifactId>
+
+
+
 
 
 
@@ -15,21 +19,10 @@
     <dependencies>
         <dependency>
             <groupId>cn.ff.rpc</groupId>
-            <artifactId>rpc-common</artifactId>
+            <artifactId>rpc-provider-common</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>cn.ff.rpc</groupId>
-            <artifactId>rpc-provider-native</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-        </dependency>
+
     </dependencies>
-
-
 
 </project>
