服务提供者：简单传输协议

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>rpc-common</module>
         <module>rpc-test</module>
         <module>rpc-provider</module>
+        <module>rcp-protocol</module>
     </modules>
 
     <!--<parent>
@@ -49,6 +50,14 @@
             <version>2.0.16</version>
             <!--<scope>test</scope>-->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+            <scope>provided</scope>
+        </dependency>
+
 
 
         <!-- Spring -->
