--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <spring.version>6.2.2</spring.version>
         <netty.version>4.1.117.Final</netty.version>
         <commons.lang3.version>3.12.0</commons.lang3.version>
+        <lombok.version>1.18.36</lombok.version>
     </properties>
 
 
@@ -54,7 +55,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.36</version>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -87,9 +88,17 @@
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
+                        <encoding>${project.build.sourceEncoding}</encoding>
                         <compilerArgs><!--解决SpringBoot 3.2 Parameter Name Retention 问题-->
                             <arg>-parameters</arg>
                         </compilerArgs>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
                     </configuration>
                 </plugin>
             </plugins>
