--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <spring.version>6.2.2</spring.version>
         <netty.version>4.1.117.Final</netty.version>
         <commons.lang3.version>3.12.0</commons.lang3.version>
-        <lombok.version>1.18.36</lombok.version>
+        <lombok.version>1.18.30</lombok.version>
     </properties>
 
 
@@ -43,6 +43,11 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>${netty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
         </dependency>
         <!-- SLF4J -->
         <dependency>
