--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>rpc-test</module>
         <module>rpc-provider</module>
         <module>rcp-protocol</module>
+        <module>rpc-consumer</module>
     </modules>
 
     <!--<parent>
